<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
            android:id="@+id/nameFilterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:inputType="textPersonName"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#CFCFCF" />

        <TextView
            android:id="@+id/statusFilterTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/status"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/status_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            >

            <RadioButton
                android:id="@+id/statusAliveRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/alive" />

            <RadioButton
                android:id="@+id/statusDeadRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/dead" />

            <RadioButton
                android:id="@+id/statusUnknownRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/unknown" />
        </RadioGroup>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#CFCFCF"/>

        <TextView
            android:id="@+id/statusSpeciesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/species"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/species_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            >

            <RadioButton
                android:id="@+id/speciesAlienRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/alien" />

            <RadioButton
                android:id="@+id/speciesHumanRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/human" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#CFCFCF"/>

        <TextView
            android:id="@+id/typeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/type"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/type_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:inputType="textPersonName"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#CFCFCF"/>

        <TextView
            android:id="@+id/releaseDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/gender"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/statusFilterTextView"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/genderFemaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/genderMaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/genderGenderlessRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/genderless" />

            <RadioButton
                android:id="@+id/genderUnknownRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/unknown" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#CFCFCF" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/buttonCancel"
                android:backgroundTint="@color/green"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:text="@string/back"
                />

            <Button
                android:id="@+id/buttonSearch"
                android:backgroundTint="@color/green"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:text="@string/search"
                />

        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
