<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameFilterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:inputType="textPersonName"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#CFCFCF" />

        <TextView
            android:id="@+id/typeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/type"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/typeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:inputType="textPersonName"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#CFCFCF"/>

        <TextView
            android:id="@+id/dimensionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/dimension"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/dimensionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:inputType="textPersonName"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#CFCFCF" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/buttonCancel"
                android:backgroundTint="@color/green"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:text="@string/back"
                />

            <Button
                android:id="@+id/buttonSearch"
                android:backgroundTint="@color/green"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:text="@string/search"
                />

        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
