<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/locations_background"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backgroundForBackImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_circle_white" />

    <ImageView
        android:id="@+id/backImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundForBackImageView"
        app:layout_constraintEnd_toEndOf="@+id/backgroundForBackImageView"
        app:layout_constraintStart_toStartOf="@+id/backgroundForBackImageView"
        app:layout_constraintTop_toTopOf="@+id/backgroundForBackImageView"
        app:srcCompat="@drawable/ic_back_green" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundImageView"
        tools:text="Rick Sanchez" />


    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/type"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/valueTypeTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/valueTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/typeTextView"
        app:layout_constraintTop_toBottomOf="@+id/typeTextView"
        tools:text="Planet" />

    <TextView
        android:id="@+id/dimensionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/dimension"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/typeTextView"
        app:layout_constraintTop_toTopOf="@+id/typeTextView" />

    <TextView
        android:id="@+id/valueDimensionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/valueTypeTextView"
        app:layout_constraintStart_toStartOf="@+id/dimensionTextView"
        tools:text="dimension c 137" />

    <View
        android:id="@+id/delimiter"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/gray"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/valueDimensionTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/residents"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delimiter" />

</androidx.constraintlayout.widget.ConstraintLayout>